--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Evaluating mathematical reasoning of foundation models in visual contexts">
   <meta name="keywords" content="MathVista, Math Vista">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> PhysBench</title>
+  <title> AnyEdit</title>
 
   <link rel="icon" href="./static/images/icon.png">
 
@@ -198,10 +198,6 @@
         <div class="column is-four-fifths">
         <h2 class="title is-3">Overview</h2>
         <div class="content has-text-justified">
-          <p>
-            We propose <img src="static/images/icon.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">AnyEdit</span>, which comprehensively evaluates VLMs' perception of the physical world across four major task categories:
-          </p>
           <p>
             <ul>
             We comprehensively categorize image editing tasks into 5 groups based on different editing capabilities:
