--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="mathvista" style="vertical-align: middle">AnyEdit</span>
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
-            Unified High-Quality Image Edit with Any Idea
+            Mastering Unified High-Quality Image Editing for Any Idea
           </h2>
           <div class="is-size-5 publication-authors">
             <!-- <span class="author-block">Anonymous</span> -->
