--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="mathvista" style="vertical-align: middle">AnyEdit</span>
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
-            Mastering Unified High-Quality Image Editing for Any Idea
+            Unified High-Quality Image Edit with Any Idea
           </h2>
           <div class="is-size-5 publication-authors">
             <!-- <span class="author-block">Anonymous</span> -->
@@ -89,7 +89,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="TODO"
+                <a href="https://github.com/DCDmllm/AnyEdit"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
