--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="TODO"
+                <a href="https://arxiv.org/abs/2411.15738"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -99,7 +99,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="TODO"
+                <a href="https://huggingface.co/datasets/Bin1117/AnyEdit"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <!-- <i class="far fa-images"></i> -->
