--- a/index.html
+++ b/index.html
@@ -612,14 +612,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
     <pre><code>
-@misc{yu2024anyeditmasteringunifiedhighquality,
-    title={AnyEdit: Mastering Unified High-Quality Image Editing for Any Idea}, 
-    author={Qifan Yu and Wei Chow and Zhongqi Yue and Kaihang Pan and Yang Wu and Xiaoyang Wan and Juncheng Li and Siliang Tang and Hanwang Zhang and Yueting Zhuang},
-    year={2024},
-    eprint={2411.15738},
-    archivePrefix={arXiv},
-    primaryClass={cs.CV},
-    url={https://arxiv.org/abs/2411.15738}, 
+@article{yu2024anyedit,
+  title={AnyEdit: Mastering Unified High-Quality Image Editing for Any Idea},
+  author={Yu, Qifan and Chow, Wei and Yue, Zhongqi and Pan, Kaihang and Wu, Yang and Wan, Xiaoyang and Li, Juncheng and Tang, Siliang and Zhang, Hanwang and Zhuang, Yueting},
+  journal={arXiv preprint arXiv:2411.15738},
+  year={2024}
 }
     </code></pre>
   </div>
