--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </span>
               <!-- Leaderboard Link. -->
               <span class="link-block">
-                <a href="https://todo.github.io/#leaderboard"
+                <a href="https://drive.google.com/file/d/1w_QsjDvNp-c9R1gaT5lex0esQAPRE1AQ/view?usp=sharing"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <p style="font-size:18px">🏆</p>
