--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="TODO"
+                <a href="https://huggingface.co/WeiChow/AnySD"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <!-- <i class="far fa-images"></i> -->
