--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
          <div class="is-size-5 publication-authors">
            <span class="author-block"><sup style="color:#6fbf73;">1</sup>Zhejiang University,</span>
            <span class="author-block"><sup style="color:#ffac33">2</sup>Nanyang Technological University,</span
-           <span class="author-block"><sup style="color:#ac33ff">3</sup>Alibaba Group</span><br>
+           <span class="author-block"><sup style="color:#ac33ff">3</sup>Ant Group</span><br>
            <span class="author-block"><sup>*</sup>Equal Contribution</span><br>
-           <!-- <span class="paper-block"><b style="color:#f41c1c">under review for ICLR 2025</b> </span> -->
+           <span class="paper-block"><b style="color:#f41c1c">CVPR 2025</b> </span>
         </div>
 
           <div class="column has-text-centered">
