--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
     <div class="columns is-centered m-6">
       <div class="column is-full has-text-centered content">
-        <h2 class="title is-3">Multi-Turnn Edit Cases</h2>
+        <h2 class="title is-3">Multi-Turns Edit Cases</h2>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
