--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
            <span class="author-block">
              <a href="None">Wei Chow</a><sup style="color:#6fbf73;">1</sup><sup>*</sup>,</span>
            <span class="author-block">
-             <a href="None">Zhongqi Yue</a><sup style="color:#ffac33;">2</sup>,</span>
+             <a href="None">Zhongqi Yue</a><sup style="color:#ffac33;">2</sup><sup>*</sup>,</span>
            <span class="author-block">
              <a href="None">Kaihang Pan</a><sup style="color:#6fbf73;">1</sup>,</span>
            <span class="author-block">
