--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
            <span class="author-block"><sup style="color:#ffac33">2</sup>Nanyang Technological University,</span
            <span class="author-block"><sup style="color:#ac33ff">3</sup>Ant Group</span><br>
            <span class="author-block"><sup>*</sup>Equal Contribution</span><br>
-           <span class="paper-block"><b style="color:#f41c1c">CVPR 2025</b> </span>
+           <span class="paper-block"><b style="color:#f41c1c">CVPR 2025 Oral</b> </span>
         </div>
 
           <div class="column has-text-centered">
